core/codegen/tests/ui-fail-nightly/typed-uri-bad-type.stderr
error[E0271]: type mismatch resolving `<String as FromParam<'_>>::Error == &str`
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:22:37
   |
22 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ expected `Infallible`, found `&str`

error[E0271]: type mismatch resolving `<String as FromParam<'_>>::Error == &str`
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:22:37
   |
22 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `Infallible`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
45 |     uri!(simple(id = "hi"));
   |     ----------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
47 |     uri!(simple("hello"));
   |     --------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, i64>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, i64>` is not implemented for `usize`
...
49 |     uri!(simple(id = 239239i64));
   |     ---------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Path, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:16:35
   |
16 | fn not_uri_display(id: i32, name: S) {  }
   |                                   ^ the trait `FromUriParam<rocket::http::uri::fmt::Path, _>` is not implemented for `S`
...
51 |     uri!(not_uri_display(10, S));
   |     ---------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_not_uri_display` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Path, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:51:30
   |
51 |     uri!(not_uri_display(10, S));
   |                              ^ the trait `FromUriParam<rocket::http::uri::fmt::Path, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:22:18
   |
22 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                  ^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not implemented for `i32`
...
56 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |     ------------------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <i32 as FromUriParam<P, i32>>
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
   = note: required for `std::option::Option<i32>` to implement `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>`
   = note: this error originates in the macro `rocket_uri_macro_optionals` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:22:37
   |
22 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>` is not implemented for `std::string::String`
...
56 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |     ------------------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <std::string::String as FromUriParam<P, std::string::String>>
             <std::string::String as FromUriParam<P, &'x std::string::String>>
             <std::string::String as FromUriParam<P, &'x mut std::string::String>>
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
             <std::string::String as FromUriParam<P, &'x mut &'a str>>
   = note: required for `Result<std::string::String, &str>` to implement `FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>`
   = note: this error originates in the macro `rocket_uri_macro_optionals` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:36:17
   |
36 | fn simple_q(id: isize) {  }
   |                 ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
...
58 |     uri!(simple_q("hi"));
   |     -------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
   = note: this error originates in the macro `rocket_uri_macro_simple_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:36:17
   |
36 | fn simple_q(id: isize) {  }
   |                 ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
...
60 |     uri!(simple_q(id = "hi"));
   |     ------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
   = note: this error originates in the macro `rocket_uri_macro_simple_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:39:29
   |
39 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
62 |     uri!(other_q(100, S));
   |     --------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:62:23
   |
62 |     uri!(other_q(100, S));
   |                       ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:39:29
   |
39 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
64 |     uri!(other_q(rest = S, id = 100));
   |     --------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:64:25
   |
64 |     uri!(other_q(rest = S, id = 100));
   |                         ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: Ignorable<rocket::http::uri::fmt::Query>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:66:25
   |
66 |     uri!(other_q(rest = _, id = 100));
   |                         ^ the trait `Ignorable<rocket::http::uri::fmt::Query>` is not implemented for `S`
   |
   = help: the following other types implement trait `Ignorable<P>`:
             std::option::Option<T>
             Result<T, E>
note: required by a bound in `assert_ignorable`
  --> $WORKSPACE/core/http/src/uri/fmt/uri_display.rs
   |
   | pub fn assert_ignorable<P: Part, T: Ignorable<P>>() {  }
   |                                     ^^^^^^^^^^^^ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `usize: Ignorable<rocket::http::uri::fmt::Query>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:68:33
   |
68 |     uri!(other_q(rest = S, id = _));
   |                                 ^ the trait `Ignorable<rocket::http::uri::fmt::Query>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Ignorable<P>`:
             std::option::Option<T>
             Result<T, E>
note: required by a bound in `assert_ignorable`
  --> $WORKSPACE/core/http/src/uri/fmt/uri_display.rs
   |
   | pub fn assert_ignorable<P: Part, T: Ignorable<P>>() {  }
   |                                     ^^^^^^^^^^^^ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:39:29
   |
39 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
68 |     uri!(other_q(rest = S, id = _));
   |     ------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:68:25
   |
68 |     uri!(other_q(rest = S, id = _));
   |                         ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <bool as FromUriParam<P, bool>>
             <bool as FromUriParam<P, &'x bool>>
             <bool as FromUriParam<P, &'x mut bool>>
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <i8 as FromUriParam<P, i8>>
             <i8 as FromUriParam<P, &'x i8>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
77 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |     ----------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Reference<'_>: ValidRoutePrefix` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:77:15
   |
77 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |          -----^^^^^^^^^^-
   |          |    |
   |          |    the trait `ValidRoutePrefix` is not implemented for `rocket::http::uri::Reference<'_>`
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRoutePrefix`:
             rocket::http::uri::Origin<'a>
             rocket::http::uri::Absolute<'a>
note: required by a bound in `RouteUriBuilder::with_prefix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_prefix<P: ValidRoutePrefix>(self, p: P) -> PrefixedRouteUri<P::Output> {
   |                           ^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_prefix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
78 |     uri!(uri!("*"), simple(id = "hi"));
   |     ---------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Asterisk: ValidRoutePrefix` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:78:15
   |
78 |     uri!(uri!("*"), simple(id = "hi"));
   |          -----^^^-
   |          |    |
   |          |    the trait `ValidRoutePrefix` is not implemented for `rocket::http::uri::Asterisk`
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRoutePrefix`:
             rocket::http::uri::Origin<'a>
             rocket::http::uri::Absolute<'a>
note: required by a bound in `RouteUriBuilder::with_prefix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_prefix<P: ValidRoutePrefix>(self, p: P) -> PrefixedRouteUri<P::Output> {
   |                           ^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_prefix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
81 |     uri!(_, simple(id = "hi"), uri!("*"));
   |     ------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Asterisk: ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:81:37
   |
81 |     uri!(_, simple(id = "hi"), uri!("*"));
   |                                -----^^^-
   |                                |    |
   |                                |    the trait `ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not implemented for `rocket::http::uri::Asterisk`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRouteSuffix<T>`:
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
note: required by a bound in `RouteUriBuilder::with_suffix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_suffix<S>(self, suffix: S) -> SuffixedRouteUri<S::Output>
   |            ----------- required by a bound in this associated function
   |         where S: ValidRouteSuffix<Origin<'static>>
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_suffix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:13:15
   |
13 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
82 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |     -------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Origin<'_>: ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:82:37
   |
82 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |                                -----^^^^^^^^^^-
   |                                |    |
   |                                |    the trait `ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not implemented for `rocket::http::uri::Origin<'_>`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRouteSuffix<T>`:
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
note: required by a bound in `RouteUriBuilder::with_suffix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_suffix<S>(self, suffix: S) -> SuffixedRouteUri<S::Output>
   |            ----------- required by a bound in this associated function
   |         where S: ValidRouteSuffix<Origin<'static>>
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_suffix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:45:22
   |
45 |     uri!(simple(id = "hi"));
   |                      ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:47:17
   |
47 |     uri!(simple("hello"));
   |                 ^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, i64>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:49:22
   |
49 |     uri!(simple(id = 239239i64));
   |                      ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, i64>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:56:25
   |
56 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |                         ^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <i32 as FromUriParam<P, i32>>
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
   = note: required for `std::option::Option<i32>` to implement `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>`
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:58:19
   |
58 |     uri!(simple_q("hi"));
   |                   ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:60:24
   |
60 |     uri!(simple_q(id = "hi"));
   |                        ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, isize>>
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:77:40
   |
77 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |                                        ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:78:33
   |
78 |     uri!(uri!("*"), simple(id = "hi"));
   |                                 ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:81:25
   |
81 |     uri!(_, simple(id = "hi"), uri!("*"));
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:82:25
   |
82 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, &'x mut usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)
